[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "slowloris"
version = "0.6.0"
description = "Low bandwidth DoS tool - Slowloris rewrite in Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "MACENG", email = "niellsamosir@gmail.com" }]
keywords = ["dos", "http", "slowloris", "security", "testing"]
dependencies = [
    "click>=8.1.8",
    "structlog>=25.4.0",
    "tenacity>=9.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]

[project.optional-dependencies]
proxy = ["python-socks>=2.5.0"]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.urls]
"Bug Reports" = "https://github.com/29nls/slowloris/issues"
"Source" = "https://github.com/29nls/slowloris"

[project.scripts]
slowloris = "slowloris:main"
slowloris-defend = "defense:main"

[tool.setuptools]
py-modules = ["slowloris", "defense"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
